plugins {
    id 'java-library'
}

tasks.withType(JavaCompile).configureEach {
    // Keep chatlib compatible with Java 8 without passing obsolete -source/-target flags to JDK 21.
    options.release = 8
}

sourceSets {
    main.java.srcDirs = ['src/main/java']
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
}
